# 1945-aiv

./: .clang-format  CMakeLists.txt  README.md  compile_flags.txt
ecs/include/: aiv_vector.h  ecs.h
ecs/src/: ecs.c
game/include/: assets_manager.h  bullet.h  explosion.h  player.h  timers.h  types.h
game/src/: assets_manager.c  bg.c  bullet.c  enemy.c  explosion.c  main.c  player.c  timers.c
include/: aiv_vector.h  assets_manager.h  bg.h  ecs.h  enemy.h  player.h  settings.h  timers.h  types.h  ui.h  utils.h
src/: assets_manager.c  bg.c  ecs.c  main.c  player.c  timers.c  ui.c
